thankyou html added after submission

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p class="waitlist-subtitle">PartyMaker launches January 2025! Join amazing Atlanta parents getting early access and save 40% off regular prices.</p>
                 
                 <div class="waitlist-form">
-                    <form name="waitlist" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+                    <form name="waitlist" method="POST" action="/thanks.html" data-netlify="true" netlify-honeypot="bot-field">
                         <input type="hidden" name="form-name" value="waitlist">
                         <p style="display: none;">
                             <label>Don't fill this out: <input name="bot-field" /></label>
