Update pricing display and enhance styles; version assets for cache busting

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     }
     </script>
     
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="./assets/styles.css?v=1.1">
 </head>
 <body>
     <!-- Skip to main content link for accessibility -->
@@ -237,8 +237,9 @@
                 <div class="pricing-grid" role="list" aria-label="Pricing options for custom party decorations">
                     <article class="price-card" role="listitem">
                         <h3>Party Starter</h3>
-                        <div class="price" aria-label="Fifteen dollars">$15</div>
-                        <div class="price-strike" aria-label="Early bird price nine dollars">Early bird: just $9</div>
+                        <div class="price-strike" aria-label="Original price fifteen dollars">$15</div>
+                        <div class="price" aria-label="Early bird price nine dollars">$9</div>
+                        <div class="early-bird-label">Early Bird Price</div>
                         <ul class="price-features" role="list">
                             <li>Custom birthday banner with your child's photo</li>
                             <li>12 beautiful party invitations</li>
@@ -251,8 +252,9 @@
                     <article class="price-card featured" role="listitem">
                         <div class="featured-badge">Most Popular!</div>
                         <h3>Full Party Magic</h3>
-                        <div class="price" aria-label="Twenty-nine dollars">$29</div>
-                        <div class="price-strike" aria-label="Early bird price seventeen dollars">Early bird: just $17</div>
+                        <div class="price-strike" aria-label="Original price twenty-nine dollars">$29</div>
+                        <div class="price" aria-label="Early bird price seventeen dollars">$17</div>
+                        <div class="early-bird-label">Early Bird Price</div>
                         <ul class="price-features" role="list">
                             <li>Everything in Party Starter PLUS:</li>
                             <li>Custom cupcake toppers (12 designs)</li>
@@ -345,7 +347,7 @@
         </div>
     </div>
 
-    <script src="./assets/script.js"></script>
+    <script src="./assets/script.js?v=1.1"></script>
 </body>
 </html>
 
