Add reviews section to index.html and corresponding styles in styles.css

--- a/index.html
+++ b/index.html
@@ -197,6 +197,65 @@
             </div>
         </section>
 
+        <!-- Reviews Section -->
+        <section class="reviews">
+            <div class="container">
+                <h2 class="section-title">What Atlanta Parents Are Saying</h2>
+                <div class="reviews-grid">
+                    <div class="review-item">
+                        <div class="party-image">
+                            <img src="https://via.placeholder.com/350x200/ff6b9d/white?text=Princess+Birthday+Party+Setup" alt="Princess party setup" loading="lazy">
+                        </div>
+                        <div class="review-content">
+                            <div class="review-header">
+                                <div class="reviewer-info">
+                                    <h4>Sarah M.</h4>
+                                    <p>Mom of 2 • Johns Creek</p>
+                                    <div class="stars">★★★★★</div>
+                                </div>
+                            </div>
+                            <p class="review-text">"Finally signed up for the waitlist after spending $200 at craft stores last month and still having a party that looked... homemade. Can't wait for this to launch!"</p>
+                            <span class="review-date">2 days ago</span>
+                        </div>
+                    </div>
+
+                    <div class="review-item">
+                        <div class="party-image">
+                            <img src="https://via.placeholder.com/350x200/667eea/white?text=Superhero+Birthday+Party+Scene" alt="Superhero party setup" loading="lazy">
+                        </div>
+                        <div class="review-content">
+                            <div class="review-header">
+                                <div class="reviewer-info">
+                                    <h4>Jennifer L.</h4>
+                                    <p>Working Mom • Alpharetta</p>
+                                    <div class="stars">★★★★★</div>
+                                </div>
+                            </div>
+                            <p class="review-text">"My 4-year-old changes his mind about party themes weekly. Having custom designs that can handle 'dinosaur-superhero-space' themes sounds like a lifesaver!"</p>
+                            <span class="review-date">4 days ago</span>
+                        </div>
+                    </div>
+
+                    <div class="review-item">
+                        <div class="party-image">
+                            <img src="https://via.placeholder.com/350x200/ffeaa7/333?text=Unicorn+Birthday+Party+Decorations" alt="Unicorn party decorations" loading="lazy">
+                        </div>
+                        <div class="review-content">
+                            <div class="review-header">
+                                <div class="reviewer-info">
+                                    <h4>Mike D.</h4>
+                                    <p>Dad of 3 • Buckhead</p>
+                                    <div class="stars">★★★★★</div>
+                                </div>
+                            </div>
+                            <p class="review-text">"Venue quoted us $850 for my daughter's party. $17 for custom everything that we can print ourselves? Yes please. January can't come fast enough."</p>
+                            <span class="review-date">1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Waitlist -->
         <section class="waitlist" id="waitlist" aria-labelledby="waitlist-title">
             <div class="container">
@@ -311,6 +370,16 @@
                         </button>
                         <div id="faq-answer-4" class="faq-answer" role="region" aria-labelledby="faq-question-4">
                             Oh yes! Princess castles, superhero adventures, unicorns, dinosaurs, space explorers, mermaids, race cars, safari animals - over 20 magical themes that kids go absolutely crazy for!
+                        </div>
+                    </article>
+
+                    <article class="faq-item" role="listitem">
+                        <button class="faq-question" onclick="toggleFAQ(this)" aria-expanded="false" aria-controls="faq-answer-5">
+                            Do I need to upload my child's photo?
+                            <span aria-hidden="true">+</span>
+                        </button>
+                        <div id="faq-answer-5" class="faq-answer" role="region" aria-labelledby="faq-question-5">
+                            Not required! While you can upload your child's photo to feature them in the designs, we also create beautiful character-based decorations without photos. Perfect for parents who prefer privacy or want adorable cartoon-style themes!
                         </div>
                     </article>
                 </div>
