--- a/thanks.html
+++ b/thanks.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You're On The List! 🎉 | PartyMaker</title>
     <link rel="preconnect" href="https://www.googletagmanager.com">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4CN4V4DRTL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-4CN4V4DRTL');
+    </script>
+
     <link rel="stylesheet" href="./assets/styles.css">
     <style>
         .thankyou {
