Add Privacy Policy link to footer in index.html and implement corresponding styles in styles.css for improved user access to privacy information.

--- a/index.html
+++ b/index.html
@@ -404,6 +404,9 @@
             <h2>Ready to Be a Party Hero?</h2>
             <p>Join 800+ Atlanta parents creating unforgettable birthdays</p>
             <a href="#waitlist" class="footer-cta-button" aria-label="Join our waitlist to create magical birthday parties">Join the Waitlist</a>
+            <div class="footer-links">
+                <a href="privacy.html" class="footer-link">Privacy Policy</a>
+            </div>
         </div>
     </footer>
 
