Add navigation links for Privacy Policy and Waitlist in index.html; style adjustments in styles.css for improved layout and user experience.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
         <div class="container">
             <nav class="nav" role="navigation" aria-label="Main navigation">
                 <div class="logo" role="img" aria-label="PartyMaker logo">PartyMaker</div>
-                <a href="#waitlist" class="nav-cta" aria-label="Join our waitlist for early access">Join Waitlist</a>
+                <div class="nav-links">
+                    <a href="privacy.html" class="nav-link">Privacy Policy</a>
+                    <a href="#waitlist" class="nav-cta" aria-label="Join our waitlist for early access">Join Waitlist</a>
+                </div>
             </nav>
         </div>
     </header>
