Revamp index.html for K-pop themed birthday party service; update titles, descriptions, and content to reflect new branding and offerings. Remove partymaker.html as it is no longer needed. Update thanks.html to align with new theme and messaging.

--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You're On The List! 🎉 | PartyMaker</title>
+    <title>Welcome to K-pop Birthday Magic! 🎉 | PartyMaker</title>
     <link rel="preconnect" href="https://www.googletagmanager.com">
 
     <!-- Google tag (gtag.js) -->
@@ -122,8 +122,8 @@
         <div class="confetti"></div>
         <div class="card">
             <div class="badge">You're in! 🎉</div>
-            <h1 class="title">Thanks for joining the PartyMaker waitlist</h1>
-            <p class="subtitle">We'll email you as soon as we launch. As a thank you, your 40% early-bird discount is locked in.</p>
+            <h1 class="title">Welcome to K-pop Birthday Magic!</h1>
+            <p class="subtitle">You're all set for Korean birthday café culture! We'll email you when we launch with your exclusive early-bird pricing for K-pop style party designs.</p>
             <div class="actions">
                 <a href="/index.html" class="btn">Back to Home</a>
                 <a href="#pricing" class="btn ghost" onclick="event.preventDefault(); window.location='/index.html#pricing'">See Pricing</a>
